Fix logo visibility: remove invert filter from nav logo

--- a/Website/Actual/css/style.css
+++ b/Website/Actual/css/style.css
@@ -204,7 +204,6 @@ body {
 .logo img {
   height: 40px;
   width: auto;
-  filter: brightness(0) invert(1);
 }
 .nav-links {
   display: flex;
